Revert "build(docs): Fix page jump when clicking on interfaces, classes or enums"
This reverts commit 7e742dd41f6982b22e237cfe0df240f05fd47e70.

--- a/docs/themes/thxvscode/assets/scss/includes/_docs.scss
+++ b/docs/themes/thxvscode/assets/scss/includes/_docs.scss
@@ -163,8 +163,7 @@
 }
 
 #docs-navbar .nav {
-	li a,
-	li div {
+	li a {
 		border-left: 1px solid $gray;
 		display: block;
 
@@ -180,11 +179,6 @@
 		}
 	}
 
-	/* Increased padding for API category/group items */
-	.api-item-kind {
-		padding: 5px 35px;
-	}
-
 	> li > a {
 		padding: 8px 15px;
 		font-size: 14px;
@@ -194,6 +188,10 @@
 		padding: 5px 25px;
 		position: relative;
 
+		/* Increased padding for API category/group items */
+		&.api-item-kind {
+			padding: 5px 35px;
+		}
 
 		/* Further increased padding for specific API endpoints */
 		&.leaf-node {
@@ -222,32 +220,18 @@
 			margin-right: 40px;
 		}
 
-		&.expanded, &.collapsed {
-			a, div {
-				&:hover {
-					background-size: 24px;
-					background-repeat: no-repeat;
-					background-position: 110px 5px;
-				}
-			}
+		&.expanded a {
+			border-color: $link-color;
 		}
-	
-		&.expanded {
-			a, div {
-				border-color: $link-color;
-	
-				&:hover {
-					background-image: url("/expand-up.svg");
-				}
-			}
+
+		&.expanded > a:hover {
+			background: url("/expand-up.svg") 110px 5px no-repeat;
+			background-size: 24px;
 		}
-	
-		&.collapsed {
-			a, div {
-				&:hover {
-					background-image: url("/expand-down.svg");
-				}
-			}
+
+		&.collapsed > a:hover {
+			background: url("/expand-down.svg") 110px 5px no-repeat;
+			background-size: 24px;
 		}
 	}
 
@@ -290,19 +274,14 @@
 
 /* Main Nav active */
 #docs-navbar > .nav > .active > a,
-#docs-navbar > .nav > .active .active > a,
-#docs-navbar > .nav > .active > div,
-#docs-navbar > .nav > .active .active > div {
-    color: $link-color !important;
+#docs-navbar > .nav > .active .active > a {
+	color: $link-color !important;
 }
 
-#docs-navbar > .nav > .active > div:not(.area),
-#docs-navbar > .nav > .active .active > div,
 #docs-navbar > .nav > .active > a:not(.area),
 #docs-navbar > .nav > .active .active > a {
-    font-weight: bold;
+	font-weight: bold;
 }
-
 
 #docs-navbar > .nav .active:not(.active-leaf) > .packages:before {
 	content: "";
